Bug 285134 - Closing the drop action popup by clicking somewhere else will execute a "move" operation instead of "cancel"
Summary: Closing the drop action popup by clicking somewhere else will execute a "move...
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-27 20:48 UTC by Gunter Ohrner
Modified: 2011-10-31 08:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2011-10-27 20:48:07 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

DnD messages onto a folder will open the drop action popup. Moving the mouse button away from it and clicking somewhere else to cancel the menu will cause a "move" operation to be executed, instead of canceling the operation.

Reproducible: Didn't try

Steps to Reproduce:
DnD messages onto a folder will open the drop action popup. Move the mouse button away from it and clicking somewhere else to cancel the menu.

Actual Results:  
The messages will be moved to the target folder.

Expected Results:  
The move operation should have been aborted, the messages should have stayed in the original folder.
Comment 1 Laurent Montel 2011-10-28 08:45:07 UTC
Can't reproduce
Comment 2 Gunter Ohrner 2011-10-29 08:13:18 UTC
You're right - it did happen for me several times in the past, and once it happens, it will happen for every DnD-operation.

However, I just tried to and I cannot reproduce it at the moment. This probably means I have to do something before in order to get kmail into that state.

I was not aware of this and as of yet, I do not know what that is. I'll keep monitoring my usage patterns and will update this bug once I have new information.
Comment 3 Gunter Ohrner 2011-10-29 08:37:25 UTC
Ok, I found out what I actually did.

I'm a heavy user of the "preferred folders" feature. The behaviour described only happens when dragging messages to one of the "preferred folders", but in this case it does always happen.
Comment 4 Laurent Montel 2011-10-31 08:52:43 UTC
Git commit 81f8af79135d56286739a065a1e0a819a8c010e9 by Montel Laurent.
Committed on 31/10/2011 at 09:52.
Pushed by mlaurent into branch 'master'.

Fix Bug 285134 - Closing the drop action popup by clicking somewhere else will execute a "move" operation instead of "cancel"

FIXED-IN: 4.7.4
BUG: 285134

M  +3    -3    akonadi/dragdropmanager.cpp
M  +1    -1    akonadi/dragdropmanager_p.h
M  +8    -1    akonadi/entitylistview.cpp
M  +2    -1    akonadi/entitytreeview.cpp

http://commits.kde.org/kdepimlibs/81f8af79135d56286739a065a1e0a819a8c010e9
Comment 5 Laurent Montel 2011-10-31 08:53:19 UTC
Git commit c81576438c3c19db6ab6132e1e30fd978ae6240d by Montel Laurent.
Committed on 31/10/2011 at 09:52.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 285134 - Closing the drop action popup by clicking somewhere else will execute a "move" operation instead of "cancel"

FIXED-IN: 4.7.4
BUG: 285134
(cherry picked from commit 81f8af79135d56286739a065a1e0a819a8c010e9)

M  +3    -3    akonadi/dragdropmanager.cpp
M  +1    -1    akonadi/dragdropmanager_p.h
M  +8    -1    akonadi/entitylistview.cpp
M  +2    -1    akonadi/entitytreeview.cpp

http://commits.kde.org/kdepimlibs/c81576438c3c19db6ab6132e1e30fd978ae6240d