Fix Bug 285134 - Closing the drop action popup by clicking somewhere else will execute a "move" operation instead of "cancel"

FIXED-IN: 4.7.4
BUG: 285134